typescript/checker/tests/errors/types/interface/same-file/index.ts
interface Foo {
  name: string;
}

let a: Foo = {};
